# tiktok-to-vk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_en.md  main.py  plan.txt  pyproject.toml  requirements.txt
app/: validation.py
app/database/: functions.py  models.py
app/tiktok/: downloader.py  scrapper.py
app/video/: processor.py  slideshow.py
app/vk/: uploader.py
config/: config.py
tests/: conftest.py  test_downloader.py  test_functions.py  test_main.py  test_processor.py  test_scrapper.py  test_slideshow.py  test_uploader.py
