[project]
name = "tiktok-to-vk-clips"
version = "0.3.0"
description = "Automated TikTok collection backup to VK Clips via yt-dlp"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp[curl-cffi]>=2026.6.26.dev0",
    "aiohttp>=3.10.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "curl-cffi>=0.15.0",
    "browser-cookie3>=0.20.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "pydantic-settings>=2.14.2",
    "av>=17.1.0",
    "gallery-dl>=1.32.0",
    "Pillow>=12.0.0",
]
