[project]
name = "tiktok-to-vk-clips"
version = "1.0.0"
description = "Sync TikTok collections to VK Clips"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp[curl-cffi]>=2025.6.26",
    "aiohttp>=3.10.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "curl-cffi>=0.15.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "pydantic-settings>=2.14.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "config", "main.py"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
